# calculateur_taux_imposition_qc

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py  taux_imposition_qc.test.py
.github/: CODEOWNERS
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml  python-tests.yml
calculateur_taux_imposition_qc/: __init__.py  calculateur.py  tax_brackets.csv
tests/: test_taux_imposition_qc.py
